<resources>
    <string name="app_name">Shopping</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navi_list"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fontawesome_webfont">fontawesome-webfont.ttf</string>

    <string name="action_settings">Settings</string>
    <string name="domain"><font size="30">Username</font></string>
    <string name="signin">Sign in</string>
    <string name="fontbold">BebasNeueBold.otf</string>
    <string name="fontreg">Proxima Nova-Regular.otf</string>

    <string name="link">BebasNeueRegular.otf</string>
    <string name="cart_action_lable">Cart</string>
    <string name="ic_heart">&#xf004;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="explore_more">Explore more</string>
    <string name="rs_00">Rs 00</string>
    <string name="desc">desc</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="product_name">product name</string>
    <string name="zero">0</string>
    <string name="quantity">quantity</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="sample_text">sample text</string>
    <string name="login">Login</string>
    <string name="ex_more">EXPLORE MORE</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
</resources>
