<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="#F9F9F9">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_cart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tab">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/backarrow"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:layout_toEndOf="@id/img_back"
                android:layout_toRightOf="@id/img_back"
                android:text="@string/cart_action_lable"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView

                android:id="@+id/txt_item_count_product_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:paddingLeft="@dimen/d10dp"
              android:paddingRight="@dimen/d10dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/zero"
                android:textColor="#FFFFFF" />

            <ImageView
                android:paddingBottom="@dimen/d10dp"
                android:paddingRight="@dimen/d10dp"
                android:paddingLeft="@dimen/d10dp"
                android:id="@+id/img_product_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txt_item_count_product_cart"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/cart_action" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_cart"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="#ffffff"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_product"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

        <View
            android:id="@+id/img_view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/img_product"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="#11000000"
            android:padding="5dp" />


        <TextView

            android:id="@+id/txt_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_view_line"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"

            android:text="@string/product_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/tbtn_fav"
            android:layout_width="20dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/img_view_line"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/select_favourite"
            android:textOff=""
            android:textOn="" />
        <!--<TextView-->
        <!--android:paddingTop="20dp"-->
        <!--android:textAlignment="center"-->
        <!--android:text="@string/ic_heart"-->
        <!--android:textSize="20sp"-->
        <!--android:id="@+id/txt_cart_fav"-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="40dp"-->

        <!--/>-->


        <TextView
            android:id="@+id/txt_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_product_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/rs_00"
            android:textColor="#4CB050"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_product_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_product_price"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/desc"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/lay_add_no_of_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_product_desc"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity" />

            <Button
                android:id="@+id/btn_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edt_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.82"
                android:gravity="center"
                android:inputType="number"
                android:text="1"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_product_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay_add_no_of_quantity"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/buttonGreen"
            android:text="@string/add_to_cart"
            android:textColor="@color/buttonTextWhiteColor" />

        <Button
            android:id="@+id/btn_save_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_product_cart"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/buttonGreen"
            android:text="save"
            android:textColor="@color/buttonTextWhiteColor" />

        <Button
            android:id="@+id/btn_delete_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_product_cart"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/btn_save_product"
            android:background="@color/buttonGreen"
            android:text="@string/delete"
            android:textColor="@color/buttonTextWhiteColor" />

    </RelativeLayout>
</RelativeLayout>
